Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjBooleanRetinteger.quorum
class Main
    action Main
        boolean one = true
        Boolean two
        two:SetValue(true)
        Yoda<boolean, Boolean, integer> yoda
        integer ret = yoda:useForce(one, two)
        output "passed"
     end
end
