Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriBooleanRetBoolObjFail.quorum
class Main
    action Main
        boolean one = true
        boolean two = true
        Yoda<boolean, boolean, Boolean> yoda
        integer wrongRet = yoda(one, two)
     end
end
